@@ -19,11 +19,14 @@ package org.apache.ignite.internal.sql.engine.rel.agg;
 
 import static org.apache.ignite.internal.sql.engine.util.Commons.maxPrefix;
 
+import com.google.common.collect.ImmutableList;
 import it.unimi.dsi.fastutil.ints.IntList;
 import java.util.List;
+import java.util.stream.Collectors;
 import org.apache.calcite.plan.RelTraitSet;
 import org.apache.calcite.rel.RelCollation;
 import org.apache.calcite.rel.RelCollations;
+import org.apache.calcite.rel.RelFieldCollation;
 import org.apache.calcite.util.ImmutableBitSet;
 import org.apache.calcite.util.ImmutableIntList;
 import org.apache.calcite.util.Pair;
@@ -60,14 +63,17 @@ interface IgniteSortAggregateBase extends TraitsAwareIgniteRel {
     ) {
         RelCollation inputCollation = TraitUtils.collation(inputTraits.get(0));
 
-        IntList newCollation = maxPrefix(inputCollation.getKeys(), getGroupSet().asSet());
+        IntList newCollationColls = maxPrefix(inputCollation.getKeys(), getGroupSet().asSet());
 
-        if (newCollation.size() < getGroupSet().cardinality()) {
-            return List.of();
+        if (newCollationColls.size() < getGroupSet().cardinality()) {
+            return ImmutableList.of();
         }
 
-        return List.of(Pair.of(
-                nodeTraits.replace(RelCollations.of(ImmutableIntList.copyOf(newCollation))),
+        List<RelFieldCollation> suitableCollations = inputCollation.getFieldCollations()
+                .stream().filter(k -> newCollationColls.contains(k.getFieldIndex())).collect(Collectors.toList());
+
+        return ImmutableList.of(Pair.of(
+                nodeTraits.replace(RelCollations.of(suitableCollations)),
                 inputTraits
         ));
     }
